<resources>
    <string name="app_name">Gestion Tambo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_user">Nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="menu_title">Gestión tambo</string>
    <string name="menu_logout">Cerrar sesión</string>
    <string name="menu_gstCattle">Gestión de Terneras</string>
    <string name="menu_imglistcattle">\@mipmap/btnlistarternerases</string>
    <string name="menu_titlecattlemanagement">\@mipmap/titulogstterneraes</string>
    <string name="menu_imgnewhistoric">\@mipmap/btningresarhistoricoses</string>
    <string name="ternera_desc">Ingrese los datos para registrar una nueva ternera</string>
    <string name="ternera_snigMother">SNIG madre:</string>
    <string name="ternera_fecNac">Nacimiento:</string>
    <string name="ternera_snigFather">SNIG padre:</string>
    <string name="ternera_pesoNac">Peso de nacimiento:</string>
    <string name="ternera_raza">Raza:</string>
    <string name="ternera_tipoParto">Tipo de parto:</string>
    <string name="ternera_cbxSeleccionar">Seleccionar</string>
    <string name="ternera_btnAltaTernera">Ingresar</string>
    <string name="datos_seleccionar">Seleccionar archivo</string>
    <string name="datos_btnInsertar">Cargar Datos</string>
    <string name="menu_welcome">Bienvenid@</string>
    <string name="login_incorrect">Nombre de usuario o contraseña incorrectos</string>
    <string name="ternera_seleccionar">Seleccionar</string>
    <string name="login_login">Iniciar sesión</string>
    <string name="login_incomplete">Revise los campos de ingreso</string>
    <string name="userEmpty">Rellene el campo</string>
    <string name="list_search">Buscar</string>
    <string name="enfermedad_nombre">Enfermedad:</string>
    <string name="enfermedad_gravedad">Gravedad:</string>
    <string name="enfermedad_variante">Variante:</string>
    <string name="historico_pesoArchivo">El archivo es demasiado pesado(>50mb)</string>
    <string name="historico_extensionArchivo">El archivo debe ser de formato .xls</string>
    <string name="historico_SeleccioneArchivo">Adjunte un archivo para subir</string>
    <string name="historico_cargaExitosa">Carga historica exitosa</string>
    <string name="historico_nombreArchivo">"Nombre: "</string>
    <string name="historico_cantidadRegistro">"Cantidad de registros: "</string>
    <string name="carga_descripcion">Seleccione un archivo de hoja de calculo en formato .xls</string>
    <string name="ternera_altaTerneraError">Error:SNIG o ID Local ya existente</string>
    <string name="ternera_altaTerneraExito">Ternera registrada con exito</string>
    <string name="ternera_selectRaza">Seleccione una raza</string>
    <string name="ternera_camposVacios">Error, verifique los campos</string>
    <string name="terneraList_snigNoEncontrado">"No se encontro una ternera con SNIG: "</string>
    <string name="terneraList_vacio">No hay terneras registradas</string>
    <string name="historicoList_snigNoEncontrado">"No se encontro un registro con SNIG: "</string>
    <string name="reconocer_reconocer">Reconocer</string>
    <string name="reconocer_SnigLeido">"El SNIG leido es: "</string>
    <string name="reconocer_si">Si</string>
    <string name="reconocer_no">No</string>
    <string name="reconocer_confirmar">¿El SNIG detectado es correcto?</string>
    <string name="reconocer_acercarCaravana">Acerque la caravana</string>
    <string name="reconocer_opciones">¿Que desea realizar?</string>
    <string name="nuevaTernera">Registrar ternera</string>
    <string name="listarTenera">Datos de ternera</string>
    <string name="listarHistorico">Datos historicos de ternera</string>
    <string name="cancelar">Cancelar</string>
    <string name="reconocer_largoSnig">El SNIG debe tener 4 digitos, enfoque el total de la caravana</string>
    <string name="desconocido">Desconocido</string>
    <string name="enfermedad_fecDeteccion">Detección:</string>
    <string name="ternera_minimoSnig">Debe tener 4 digitos</string>
    <string name="ternera_fechaFutura">La fecha debe menor a hoy</string>
    <string name="bajaTernera">Borrar Ternera</string>
    <string name="borrar_titulo">Esta seguro de borrar la ternera?</string>
    <string name="ternera_bajaTerneraExito">Ternera eliminada exitosamente</string>
    <string name="ternera_bajaTerneraError">La ternera no se elimino exitosamente</string>

</resources>